[NavFoot.css] fix footer alignment, adjust navbar hover and text

--- a/frontend/src/components/css/NavFoot.css
+++ b/frontend/src/components/css/NavFoot.css
@@ -16,16 +16,35 @@
 
 .nav-item
 {
-    font-size: 20px;
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.nav-link
+{
+    padding: 0px;
+    border: 8px solid rgba(255, 255, 255, 0);
+    border-radius: 20px;
+    width: fit-content;
+    font-weight: 700;
+}
+
+.nav-link:hover
+{
+    background-color: rgba(220, 245, 255, 0.507);
+}
+
+.active
+{
     font-weight: 700;
 }
 
 .footer 
 {
     position: absolute;
-    bottom: 5vh;
+    top: 90vh;
     width: 100%;
-    height: 4vh;
+    height: 2vh;
 }
 
 .footer-text
